examples/test/testpolicy462.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy462
  namespace: namespace438
spec:
  podSelector:
    matchLabels:
      key45: value14
      key8: value15
      key18: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value12
          key39: value42
      podSelector:
        matchLabels:
          key16: value33
          key44: value24
          key6: value44
